--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,58 @@
 
 body {
   font-family: "Noto Sans TC", sans-serif;
+
+    margin:0;
+    padding:0;
+
+    background-image: url('https://images.unsplash.com/photo-1504817281472-f56fda3040a5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1338&q=80');
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
+
+
+.module {
+    position: relative;
+  }
+  .module::before {
+    content: "";
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background-image: url(graphic-to-be-filtered.jpg);
+    filter: grayscale(100%);
+  }
+  .module-inside {
+    /* This will make it stack on top of the ::before */
+    position: relative;
+  }
+
+
+.contain {
+    border: 1px solid #000;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+section {
+    border: 1px solid #000;
+    border-radius: 20px;
+    /* width:50%;
+    margin-left:25%;
+    margin-top: 15%; */
+    text-align: center;
+    padding:3%;
+    background-color: chocolate;
+}
+
+section h1 {
+    font-size: 36px;
+}
+
+section p {
+    font-size: 18px;
+}
+
