--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ section {
     width: 100%; height: 100%;
     background-image: url('https://images.unsplash.com/photo-1504817281472-f56fda3040a5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1338&q=80');
     filter: grayscale(50%);
+    /* filter:blur(15px); */
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
@@ -29,6 +30,7 @@ section {
   }
   .module-inside {
     position: relative;
+    box-shadow: 4px 4px 6px rgba(0,0,0,.5);
     
   }
 
@@ -42,7 +44,7 @@ section {
     
 }
 section {
-    border: 1px solid #000;
+    /* border: 1px solid #000; */
     border-radius: 20px;
     text-align: center;
     padding:3%;
