--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ section {
   width: 100%;
   height: 100%;
   background-image: url("https://images.unsplash.com/photo-1504817281472-f56fda3040a5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1338&q=80");
-  filter: grayscale(50%);
+  filter: grayscale(75%);
   /* filter:blur(15px); */
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -74,7 +74,7 @@ nav img {
   margin: auto;
 }
 
-/*  Ipad */
+/*  Ipad pro*/
 
 @media screen and (max-width: 1024px) {
   .module::before {
@@ -84,30 +84,33 @@ nav img {
   .contain {
     display: block;
     border: 1px solid #fff;
-    height:97vh;
+    height: 97vh;
   }
 
   .module-inside {
-    max-width: 50%;
+    max-width: 66%;
     margin: auto;
-    top:25%;
+    top: 15%;
   }
 
   section h1 {
-    font-size: 50px;
+    font-size: 80px;
   }
 
   section p {
-    font-size: 28px;
+    font-size: 40px;
   }
-
-
 }
 
 @media screen and (max-width: 445px) {
-  .module::before {
-    background-image: url("https://images.unsplash.com/photo-1568121581570-a30e94219113?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
+  .contain {
+    width: 105%;
+    position: relative;
+    right: 2.5%;
   }
+  /* .module::before {
+    background-image: url("https://images.unsplash.com/photo-1497449711066-ecd7e3d6a484?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1001&q=80");
+  } */
 
   .module-inside {
     max-width: 80%;
@@ -128,10 +131,4 @@ nav img {
     font-size: 18px;
   }
 
-  .contain {
-    /* border: 1px solid transparent; */
-  }
 }
-
-
-
