--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,8 @@ section {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("https://images.unsplash.com/photo-1504817281472-f56fda3040a5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1338&q=80");
-  filter: grayscale(75%);
+  background-image: url('./images/bg.jpg');
+  /* filter: grayscale(75%); */
   /* filter:blur(15px); */
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -51,7 +51,6 @@ section {
   text-align: center;
   letter-spacing: 0.33px;
   padding: 3%;
-  /* background-image: linear-gradient(to right, #31d291, #1f1f1f); */
   background-color: rgba(49, 210, 145, 0.95);
 }
 
@@ -78,7 +77,7 @@ nav img {
 
 @media screen and (max-width: 1024px) {
   .module::before {
-    background-image: url("https://images.unsplash.com/photo-1563283323-afa46a75568c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1329&q=80");
+    /* background-image: url("https://images.unsplash.com/photo-1563283323-afa46a75568c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1329&q=80"); */
   }
 
   .contain {
@@ -90,7 +89,7 @@ nav img {
   .module-inside {
     max-width: 66%;
     margin: auto;
-    top: 15%;
+    top: 10%;
   }
 
   section h1 {
